# Xmuse-Coding

./: README.md
EEG_analyze/: CHANGELOG.md  CONTRIBUTING.md  (+13 more)
Xmuse_OSC_For_Plenty_Machine_Recording/: LICENSE  MANIFEST.in  README.md  main.py  requirements-dev.txt  requirements.txt  run.py  setup.cfg
Xmuse_OSC_For_Plenty_Machine_Recording/data/: osc_data_port_8001_20250116_102227.csv  osc_data_port_8002_20250116_102227.csv
Xmuse_OSC_For_Plenty_Machine_Recording/docs/: API.md  CONTRIBUTING.md  DEVELOPMENT.md  USAGE.md
Xmuse_OSC_For_Plenty_Machine_Recording/eeg_data/: eeg_data_20250116_090950.csv  eeg_data_20250116_091112.csv  eeg_data_20250116_091444.csv  eeg_data_20250116_091458.csv  eeg_data_20250116_091514.csv  eeg_data_20250116_091533.csv  eeg_data_20250116_091631.csv  eeg_data_20250116_091743.csv  eeg_data_20250116_091747.csv  eeg_data_20250116_091757.csv  eeg_data_20250116_091758.csv  eeg_data_20250116_092736.csv  eeg_data_20250116_092832.csv  eeg_data_20250116_093219.csv  eeg_data_20250116_093332.csv  eeg_data_20250116_093723.csv  eeg_data_20250116_095615.csv  eeg_data_20250116_095812.csv  eeg_data_20250116_100220.csv  eeg_data_final_20250116_090655.csv  eeg_data_final_20250116_090957.csv  eeg_data_final_20250116_091117.csv  eeg_data_final_20250116_091247.csv  eeg_data_final_20250116_091544.csv  eeg_data_final_20250116_091635.csv  eeg_data_final_20250116_091822.csv
Xmuse_OSC_For_Plenty_Machine_Recording/osc_receiver/: __init__.py  main.py
Xmuse_OSC_For_Plenty_Machine_Recording/osc_receiver/core/: data_types.py  receiver.py  signal_manager.py
Xmuse_OSC_For_Plenty_Machine_Recording/osc_receiver/ui/: __init__.py  signal_selector.py
(+139 files in other folders)
