[metadata]
name = osc-data-receiver
version = 0.1.0
description = 多端口 OSC 数据接收和处理工具
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/your-username/osc-data-receiver
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Resear ch
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.7
install_requires =
    python-osc>=1.8.0
    pandas>=1.3.0
    numpy>=1.21.0
    colorama>=0.4.4

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    pytest-benchmark>=4.0.0
    pylint>=2.12.0
    black>=22.0.0
    isort>=5.10.0
    mypy>=0.950

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --verbose --cov=osc_receiver --cov-report=term-missing

[coverage:run]
source = osc_receiver
omit = tests/*

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[pylint]
max-line-length = 88
disable = C0111,R0903,C0103
good-names = i,j,k,ex,Run,_,fd 